--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "aws-amplify": "^6.13.0",
-    "constructs": "^10.0.0",
     "aws-cdk-lib": "^2.178.2",
+    "constructs": "^10.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
@@ -50,6 +50,9 @@
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.14.1",
-    "@aws-amplify/backend-cli": "^1.4.10"
+    "@aws-amplify/backend-cli": "^1.4.10",
+    "aws-cdk": "^2.178.2",
+    "esbuild": "^0.25.0",
+    "tsx": "^4.19.2"
   }
 }
