--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": ">=18.19.0"
-  },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.9.1",
     "@testing-library/dom": "^10.4.0",
@@ -20,6 +17,7 @@
     "constructs": "^10.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "typescript": "^5.7.3",
     "web-vitals": "^2.1.0"
