--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^19.0.0",
     "aws-amplify": "^6.13.0",
     "aws-cdk-lib": "^2.178.2",
+    "axios": "^1.7.9",
     "constructs": "^10.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
