--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_USER_POOL_ID=us-east-1_iELPedS4W
 REACT_APP_USER_POOL_CLIENT_ID=6ujbmi8coqbjmclqnc3d0ua5c5
+REACT_APP_API_ENDPOINT=https://z8qzoeztpc.execute-api.us-east-1.amazonaws.com/default/helloworld
+REACT_APP_API_REGION=us-east-1
