--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/auth": "^6.11.1",
+    "@aws-amplify/storage": "^6.7.11",
     "@aws-amplify/ui-react": "^6.9.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -12,10 +14,11 @@
     "@types/node": "^16.7.13",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "aws-amplify": "^6.13.0",
+    "aws-amplify": "^6.13.1",
     "aws-cdk-lib": "^2.178.2",
     "axios": "^1.7.9",
     "constructs": "^10.4.2",
+    "localforage": "^1.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
