--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/howler": "^2.2.12",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^19.0.0",
@@ -18,6 +19,7 @@
     "aws-cdk-lib": "^2.178.2",
     "axios": "^1.7.9",
     "constructs": "^10.4.2",
+    "howler": "^2.2.4",
     "localforage": "^1.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
