--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@aws-amplify/auth": "^6.11.1",
     "@aws-amplify/storage": "^6.7.11",
     "@aws-amplify/ui-react": "^6.9.1",
+    "@tanstack/react-query": "^5.66.11",
+    "@tanstack/react-query-devtools": "^5.66.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
@@ -17,7 +19,7 @@
     "@types/react-dom": "^19.0.0",
     "aws-amplify": "^6.13.1",
     "aws-cdk-lib": "^2.178.2",
-    "axios": "^1.7.9",
+    "axios": "^1.8.1",
     "constructs": "^10.4.2",
     "howler": "^2.2.4",
     "localforage": "^1.10.0",
