--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "howler": "^2.2.4",
     "localforage": "^1.10.0",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
@@ -58,6 +59,7 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.14.1",
     "@aws-amplify/backend-cli": "^1.4.10",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "aws-cdk": "^2.178.2",
     "esbuild": "^0.25.0",
     "tsx": "^4.19.2"
